# smallestai-cookbook

./: .gitignore  README.md
.github/workflows/: test-docs-snippets.yml
docs/tests/: test_snippets.py
integrations/langchain/: .env.sample  README.md  requirements.txt
integrations/n8n/: README.md
speech-to-text/: mic-input-python.py  transcribe-curl.sh  transcribe-javascript.js  transcribe-python.py  websocket-python.py
text-to-speech/: README.md  quickstart-curl.sh  quickstart-javascript.js  quickstart-python.py  streaming-python.py
text-to-speech/language-translation-app/: .cursorrules  .env.sample  .gitignore  README.md  requirements.txt
text-to-speech/news-voice-app/: .env.sample  .gitignore  README.md
text-to-speech/streaming/: README.md
text-to-speech/voice-explorer/: .env.sample  README.md  app.py  requirements.txt
voice-agents/: MOBILE_COOKBOOKS.md  README.md
voice-agents/android_kotlin_voice_agent/: .gitignore  README.md  build.gradle  local.properties.example  settings.gradle
voice-agents/android_kotlin_voice_widget/: README.md  gradle.properties  local.properties  settings.gradle
voice-agents/appointment_scheduler/: README.md  app.py  calcom_client.py  requirements.txt  scheduler_agent.py
voice-agents/atoms_sdk_web_agent/: README.md  package.json
voice-agents/bank_csr/: README.md  app.py  audit_logger.py  csr_agent.py  database.py  pyproject.toml
voice-agents/calendar_receptionist/: .env.sample  .gitignore  README.md  atoms-agent-config.json  package.json
voice-agents/flutter_voice_agent/: README.md  pubspec.yaml
(+213 files in other folders)
